objects/ASI_CRM_Promotion_POSM__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_HK_CRM_Promotion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Channel Promotion</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Promotion POSMs</relationshipLabel>
        <relationshipName>Promotion_POSMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW SKU Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Promotion POSMs</relationshipLabel>
        <relationshipName>Promotion_POSMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promotion POSM</label>
    <listViews>
        <fullName>ASI_CRM_TW_Promotion_POSMs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promotion__c</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>ASI_CRM_Qty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_POSM__c.ASI_CRM_TW_PromotionPOSM</value>
        </filters>
        <label>TW Promotion POSMs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Promotion POSM Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion POSMs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_PromotionPOSM</fullName>
        <active>true</active>
        <label>TW Promotion POSM</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>